smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/numbers/decimal-with-no-digit-after.smithy
// Syntax error at line 7, column 7: Invalid number '1.': '.' must be followed by a digit | Model
namespace smithy.example

@trait
integer test

@test(1.)
string MyString
